# asteroids

./: .gitignore  circleshape.py  constants.py  logger.py  main.py  mise.toml  player.py  pyproject.toml  utils.py
asteroids/: asteroid_field.py  constants.py  main.py  player.py  utils.py
asteroids/sprites/: asteroid.py  asteroid_field.py  base.py  circleshape.py  player.py  shot.py
asteroids/sprites/mixins/: collidable.py  drawable.py  updatable.py
tests/: test_utils.py
tests/sprites/: test_asteroid.py  test_player.py
