[project]
name = "asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "debugpy>=1.8.20",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.mypy]
strict = true
disallow_untyped_globals = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["D"]
extend-select = ["I001", "I002"]

[tool.ruff.lint.pydocstyle]
convention = "google"
